# Simple-fintech-backend

./: .gitignore  README.md  app.py  main.py  pyproject.toml
api/: routes.py
database/: db.py  view_table.py  wallet.db
docs/: index.html
frontend/: index.html
schemas/: transaction_schema.py  user_schema.py  wallet_schema.py
services/: transaction_service.py  user_service.py  wallet_service.py
users/: auth.py  users.json
utils/: generators.py  jwt_handler.py
