[project]
name = "transaction-based"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.137.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "python-jose>=3.5.0",
    "uvicorn>=0.49.0",
]
